Document swagger post endpoint to create a list
